--- a/uno/package.json
+++ b/uno/package.json
@@ -17,6 +17,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "pg-promise": "^10.12.0",
     "pug": "^3.0.2",
     "sequelize": "^6.24.0",
     "sequelize-cli": "^6.5.1"
