--- a/uno/package.json
+++ b/uno/package.json
@@ -20,6 +20,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "pg-promise": "^10.12.0",
     "pug": "^3.0.2",
     "sequelize": "^6.24.0",
