--- a/uno/package.json
+++ b/uno/package.json
@@ -18,6 +18,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "passport": "^0.6.0",
